--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,9 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 8px;
   background: linear-gradient(to right, var(--from-color), var(--to-color));
   opacity: 0;
@@ -22,8 +23,9 @@
   position: absolute;
   width: 120%;
   height: 120%;
-  top: -2;
-  left: 2;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 8px;
   filter: blur(20px);
   background: linear-gradient(to right, var(--from-color), var(--to-color));
